# TFT-Tracker

./: .gitignore  README.md  backlog.md  data_model.md  master_plan.md  prd.md  sprint_plan.md
.github/workflows/: ci.yml
apps/api/: alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 202401010000_initial_schema.py  202411020001_add_phase_tables.py  202511030740_add_sentiment_tables.py  202511031142_add_display_ticker.py  202511031548_create_user_tables.py
apps/api/app/: __init__.py  config.py  main.py  schemas.py
apps/api/app/db/: models.py  session.py
apps/api/app/dependencies/: __init__.py  auth.py  rate_limit.py
apps/api/app/jobs/: __init__.py  scheduler.py
apps/api/app/routers/: __init__.py  assets.py  auth.py  ingest.py  phase.py  snapshots.py  watchlist.py
apps/api/app/services/: __init__.py  classify_phase.py  indicators.py  ingest_market.py  sentiment.py
apps/api/app/tft_tracker_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
apps/api/app/utils/: __init__.py  assets.py  tickers.py
apps/api/tests/: conftest.py  test_health.py  test_phase_classifier.py  test_sentiment_ingestor.py  test_snapshots.py  test_watchlist.py
apps/web/: .eslintrc.json  package.json  tailwind.config.ts  tsconfig.json
apps/web/src/app/: layout.tsx  page.tsx
apps/web/src/components/: AssetCard.tsx  ExplainModal.tsx  PhaseBadge.tsx  WatchlistPanel.tsx
apps/web/src/styles/: globals.css
apps/web/src/types/: phase.ts
db/seeds/: seed_assets.sql
docs/: QA_CHECKLIST.md  RELEASE_RUNBOOK.md
infra/: docker-compose.yml
